[project]
name = "codereviewer"
version = "0.1.0"
description = "codereviewer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
codereviewer = "codereviewer.main:run"
run_crew = "codereviewer.main:run"
train = "codereviewer.main:train"
replay = "codereviewer.main:replay"
test = "codereviewer.main:test"
run_with_trigger = "codereviewer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
